--- a/css/hse-codes.css
+++ b/css/hse-codes.css
@@ -3,8 +3,26 @@
 .hse-sound-horn:before { content: '\e801'; } /* '' */
 .hse-use-handrail :before { content: '\e802'; } /* '' */
 .hse-connect-earth-terminal:before { content: '\e803'; } /* '' */
+.hse-wear-hardhat:before { content: '\e804'; } /* '' */
 .hse-attention-mandatory:before { content: '\e805'; } /* '' */
 .hse-use-gas-detector:before { content: '\e806'; } /* '' */
 .hse-wash-hands:before { content: '\e807'; } /* '' */
 .hse-refer-instructions:before { content: '\e808'; } /* '' */
 .hse-wear-opaque-eye-protection:before { content: '\e809'; } /* '' */
+.hse-wear-welding-mask:before { content: '\e80a'; } /* '' */
+.hse-wear-safety-harness:before { content: '\e80b'; } /* '' */
+.hse-wear-seat-belt :before { content: '\e80c'; } /* '' */
+.hse-wear-respiratory-protection:before { content: '\e80d'; } /* '' */
+.hse-disconnect-before-repair:before { content: '\e80e'; } /* '' */
+.hse-Wear High Visibility Clothing:before { content: '\e80f'; } /* '' */
+.hse-wear-mask:before { content: '\e810'; } /* '' */
+.hse-secure-gas-cylinder:before { content: '\e811'; } /* '' */
+.hse-use-this-walkway:before { content: '\e812'; } /* '' */
+.hse-wear-protective-clothing:before { content: '\e813'; } /* '' */
+.hse-use-breathing-apparatus:before { content: '\e814'; } /* '' */
+.hse-wear-anti-static-shoes:before { content: '\e815'; } /* '' */
+.hse-wear-eye-protection:before { content: '\e816'; } /* '' */
+.hse-wear-safety-shoes:before { content: '\e817'; } /* '' */
+.hse-wear-face-shield:before { content: '\e818'; } /* '' */
+.hse-disconnect-plug-outlet :before { content: '\e819'; } /* '' */
+.hse-wear-protective-gloves:before { content: '\e81a'; } /* '' */
